# vi-ferrous-oxide

./: Cargo.toml  README.md  newcodeproj.txt  test.txt
src/: main.rs  rope.rs  test_rope.rs
src/rope/: base.rs  iterator.rs  mod.rs  test.rs
