[package]
name = "vi_ferrous_oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = { version = "0.27.0", features = ["bracketed-paste"] }
log = "0.4.20"
env_logger = "0.11.0"
simplelog = "0.12.1"
